build/stage1/syntax.output
Terminals unused in grammar

   INVALID_ID


State 59 conflicts: 1 shift/reduce
State 85 conflicts: 4 shift/reduce
State 86 conflicts: 4 shift/reduce
State 123 conflicts: 18 shift/reduce
State 124 conflicts: 4 shift/reduce
State 125 conflicts: 4 shift/reduce
State 126 conflicts: 4 shift/reduce
State 127 conflicts: 4 shift/reduce
State 128 conflicts: 4 shift/reduce
State 129 conflicts: 4 shift/reduce
State 130 conflicts: 4 shift/reduce
State 131 conflicts: 4 shift/reduce
State 132 conflicts: 4 shift/reduce
State 133 conflicts: 4 shift/reduce
State 134 conflicts: 4 shift/reduce
State 135 conflicts: 4 shift/reduce
State 136 conflicts: 4 shift/reduce
State 137 conflicts: 4 shift/reduce
State 151 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: QualifiedSpecifier ExtDecList SEMI
    5       | QualifiedSpecifier SEMI
    6       | QualifiedSpecifier FunDec CompSt
    7       | QualifiedSpecifier FunDec error RC
    8       | QualifiedSpecifier FunDec LC error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 QualifiedSpecifier: Specifier
   12                   | CONST Specifier

   13 Specifier: TYPE
   14          | StructSpecifier
   15          | FunctionSpecifier

   16 StructSpecifier: STRUCT ID LC DefList RC
   17                | STRUCT ID

   18 FunctionSpecifier: FUNCTION LT SpecifierList RA Specifier GT

   19 SpecifierList: Specifier
   20              | Specifier COMMA SpecifierList
   21              | %empty

   22 VarDec: ID
   23       | VarDec LB INT RB

   24 FunDec: ID LP VarList RP
   25       | ID LP RP
   26       | ID LP error

   27 VarList: ParamDec COMMA VarList
   28        | ParamDec

   29 ParamDec: QualifiedSpecifier VarDec

   30 CompSt: LC DefList StmtList RC

   31 StmtList: Stmt StmtList
   32         | Stmt Def error StmtList
   33         | %empty

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | RETURN Exp error

   41 DefList: Def DefList
   42        | %empty

   43 Def: QualifiedSpecifier DecList SEMI
   44    | QualifiedSpecifier DecList error

   45 DecList: Dec
   46        | Dec COMMA DecList

   47 Dec: VarDec
   48    | VarDec ASSIGN Exp

   49 LambdaExp: LAMBDA LT VarList RA Specifier GT CompSt

   50 Exp: Exp ASSIGN Exp
   51    | Exp AND Exp
   52    | Exp OR Exp
   53    | Exp MYSTERIOUS_LEXEME Exp
   54    | Exp LT Exp
   55    | Exp LE Exp
   56    | Exp GT Exp
   57    | Exp GE Exp
   58    | Exp NE Exp
   59    | Exp EQ Exp
   60    | Exp PLUS Exp
   61    | Exp MINUS Exp
   62    | Exp MUL Exp
   63    | Exp DIV Exp
   64    | Exp COMP Exp
   65    | LP Exp RP
   66    | MINUS Exp
   67    | NOT Exp
   68    | Exp LP Args RP
   69    | Exp LP Args error
   70    | Exp LP RP
   71    | Exp LB Exp RB
   72    | Exp DOT ID
   73    | LambdaExp
   74    | ID
   75    | INT
   76    | FLOAT
   77    | CHAR
   78    | MysteriousLexemeList

   79 MysteriousLexemeList: MYSTERIOUS_LEXEME
   80                     | MYSTERIOUS_LEXEME MysteriousLexemeList

   81 Args: Exp COMMA Args
   82     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 26 32 40 44 69
MYSTERIOUS_LEXEME (258) 53 79 80
INVALID_ID (259)
ID (260) 16 17 22 24 25 26 72 74
LC (261) 8 16 30
RC (262) 7 16 30
ASSIGN (263) 48 50
RA (264) 18 49
OR (265) 52
AND (266) 51
LT (267) 18 49 54
LE (268) 55
GT (269) 18 49 56
GE (270) 57
EQ (271) 59
NE (272) 58
PLUS (273) 60
MINUS (274) 61 66
MUL (275) 62
DIV (276) 63
COMP (277) 64
NOT (278) 67
DOT (279) 72
LB (280) 23 71
RB (281) 23 71
LP (282) 24 25 26 37 38 39 65 68 69 70
RP (283) 24 25 37 38 39 65 68 70
IF (284) 37 38
ELSE (285) 38
WHILE (286) 39
RETURN (287) 36 40
SEMI (288) 4 5 34 36 43
COMMA (289) 10 20 27 46 81
LAMBDA (290) 49
TYPE (291) 13
STRUCT (292) 16 17
FUNCTION (293) 18
CONST (294) 12
INT (295) 23 75
FLOAT (296) 76
CHAR (297) 77


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
Program (44)
    on left: 1, on right: 0
ExtDefList (45)
    on left: 2 3, on right: 1 2
ExtDef (46)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (47)
    on left: 9 10, on right: 4 10
QualifiedSpecifier (48)
    on left: 11 12, on right: 4 5 6 7 8 29 43 44
Specifier (49)
    on left: 13 14 15, on right: 11 12 18 19 20 49
StructSpecifier (50)
    on left: 16 17, on right: 14
FunctionSpecifier (51)
    on left: 18, on right: 15
SpecifierList (52)
    on left: 19 20 21, on right: 18 20
VarDec (53)
    on left: 22 23, on right: 9 10 23 29 47 48
FunDec (54)
    on left: 24 25 26, on right: 6 7 8
VarList (55)
    on left: 27 28, on right: 24 27 49
ParamDec (56)
    on left: 29, on right: 27 28
CompSt (57)
    on left: 30, on right: 6 35 49
StmtList (58)
    on left: 31 32 33, on right: 30 31 32
Stmt (59)
    on left: 34 35 36 37 38 39 40, on right: 31 32 37 38 39
DefList (60)
    on left: 41 42, on right: 16 30 41
Def (61)
    on left: 43 44, on right: 32 41
DecList (62)
    on left: 45 46, on right: 43 44 46
Dec (63)
    on left: 47 48, on right: 45 46
LambdaExp (64)
    on left: 49, on right: 73
Exp (65)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69 70 71 72 73 74 75 76 77 78, on right: 34 36 37 38 39 40 48
    50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 81 82
MysteriousLexemeList (66)
    on left: 79 80, on right: 78 80
Args (67)
    on left: 81 82, on right: 68 69 81


State 0

    0 $accept: . Program $end

    TYPE      shift, and go to state 1
    STRUCT    shift, and go to state 2
    FUNCTION  shift, and go to state 3
    CONST     shift, and go to state 4

    $default  reduce using rule 3 (ExtDefList)

    Program             go to state 5
    ExtDefList          go to state 6
    ExtDef              go to state 7
    QualifiedSpecifier  go to state 8
    Specifier           go to state 9
    StructSpecifier     go to state 10
    FunctionSpecifier   go to state 11


State 1

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


State 2

   16 StructSpecifier: STRUCT . ID LC DefList RC
   17                | STRUCT . ID

    ID  shift, and go to state 12


State 3

   18 FunctionSpecifier: FUNCTION . LT SpecifierList RA Specifier GT

    LT  shift, and go to state 13


State 4

   12 QualifiedSpecifier: CONST . Specifier

    TYPE      shift, and go to state 1
    STRUCT    shift, and go to state 2
    FUNCTION  shift, and go to state 3

    Specifier          go to state 14
    StructSpecifier    go to state 10
    FunctionSpecifier  go to state 11


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 15


State 6

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 7

    2 ExtDefList: ExtDef . ExtDefList

    TYPE      shift, and go to state 1
    STRUCT    shift, and go to state 2
    FUNCTION  shift, and go to state 3
    CONST     shift, and go to state 4

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList          go to state 16
    ExtDef              go to state 7
    QualifiedSpecifier  go to state 8
    Specifier           go to state 9
    StructSpecifier     go to state 10
    FunctionSpecifier   go to state 11


State 8

    4 ExtDef: QualifiedSpecifier . ExtDecList SEMI
    5       | QualifiedSpecifier . SEMI
    6       | QualifiedSpecifier . FunDec CompSt
    7       | QualifiedSpecifier . FunDec error RC
    8       | QualifiedSpecifier . FunDec LC error

    ID    shift, and go to state 17
    SEMI  shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 9

   11 QualifiedSpecifier: Specifier .

    $default  reduce using rule 11 (QualifiedSpecifier)


State 10

   14 Specifier: StructSpecifier .

    $default  reduce using rule 14 (Specifier)


State 11

   15 Specifier: FunctionSpecifier .

    $default  reduce using rule 15 (Specifier)


State 12

   16 StructSpecifier: STRUCT ID . LC DefList RC
   17                | STRUCT ID .

    LC  shift, and go to state 22

    $default  reduce using rule 17 (StructSpecifier)


State 13

   18 FunctionSpecifier: FUNCTION LT . SpecifierList RA Specifier GT

    TYPE      shift, and go to state 1
    STRUCT    shift, and go to state 2
    FUNCTION  shift, and go to state 3

    $default  reduce using rule 21 (SpecifierList)

    Specifier          go to state 23
    StructSpecifier    go to state 10
    FunctionSpecifier  go to state 11
    SpecifierList      go to state 24


State 14

   12 QualifiedSpecifier: CONST Specifier .

    $default  reduce using rule 12 (QualifiedSpecifier)


State 15

    0 $accept: Program $end .

    $default  accept


State 16

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 17

   22 VarDec: ID .
   24 FunDec: ID . LP VarList RP
   25       | ID . LP RP
   26       | ID . LP error

    LP  shift, and go to state 25

    $default  reduce using rule 22 (VarDec)


State 18

    5 ExtDef: QualifiedSpecifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 19

    4 ExtDef: QualifiedSpecifier ExtDecList . SEMI

    SEMI  shift, and go to state 26


State 20

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   23 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 27
    COMMA  shift, and go to state 28

    $default  reduce using rule 9 (ExtDecList)


State 21

    6 ExtDef: QualifiedSpecifier FunDec . CompSt
    7       | QualifiedSpecifier FunDec . error RC
    8       | QualifiedSpecifier FunDec . LC error

    error  shift, and go to state 29
    LC     shift, and go to state 30

    CompSt  go to state 31


State 22

   16 StructSpecifier: STRUCT ID LC . DefList RC

    TYPE      shift, and go to state 1
    STRUCT    shift, and go to state 2
    FUNCTION  shift, and go to state 3
    CONST     shift, and go to state 4

    $default  reduce using rule 42 (DefList)

    QualifiedSpecifier  go to state 32
    Specifier           go to state 9
    StructSpecifier     go to state 10
    FunctionSpecifier   go to state 11
    DefList             go to state 33
    Def                 go to state 34


State 23

   19 SpecifierList: Specifier .
   20              | Specifier . COMMA SpecifierList

    COMMA  shift, and go to state 35

    $default  reduce using rule 19 (SpecifierList)


State 24

   18 FunctionSpecifier: FUNCTION LT SpecifierList . RA Specifier GT

    RA  shift, and go to state 36


State 25

   24 FunDec: ID LP . VarList RP
   25       | ID LP . RP
   26       | ID LP . error

    error     shift, and go to state 37
    RP        shift, and go to state 38
    TYPE      shift, and go to state 1
    STRUCT    shift, and go to state 2
    FUNCTION  shift, and go to state 3
    CONST     shift, and go to state 4

    QualifiedSpecifier  go to state 39
    Specifier           go to state 9
    StructSpecifier     go to state 10
    FunctionSpecifier   go to state 11
    VarList             go to state 40
    ParamDec            go to state 41


State 26

    4 ExtDef: QualifiedSpecifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 27

   23 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 42


State 28

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 43

    ExtDecList  go to state 44
    VarDec      go to state 20


State 29

    7 ExtDef: QualifiedSpecifier FunDec error . RC

    RC  shift, and go to state 45


State 30

    8 ExtDef: QualifiedSpecifier FunDec LC . error
   30 CompSt: LC . DefList StmtList RC

    error     shift, and go to state 46
    TYPE      shift, and go to state 1
    STRUCT    shift, and go to state 2
    FUNCTION  shift, and go to state 3
    CONST     shift, and go to state 4

    MYSTERIOUS_LEXEME  reduce using rule 42 (DefList)
    ID                 reduce using rule 42 (DefList)
    LC                 reduce using rule 42 (DefList)
    RC                 reduce using rule 42 (DefList)
    MINUS              reduce using rule 42 (DefList)
    NOT                reduce using rule 42 (DefList)
    LP                 reduce using rule 42 (DefList)
    IF                 reduce using rule 42 (DefList)
    WHILE              reduce using rule 42 (DefList)
    RETURN             reduce using rule 42 (DefList)
    LAMBDA             reduce using rule 42 (DefList)
    INT                reduce using rule 42 (DefList)
    FLOAT              reduce using rule 42 (DefList)
    CHAR               reduce using rule 42 (DefList)

    QualifiedSpecifier  go to state 32
    Specifier           go to state 9
    StructSpecifier     go to state 10
    FunctionSpecifier   go to state 11
    DefList             go to state 47
    Def                 go to state 34


State 31

    6 ExtDef: QualifiedSpecifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 32

   43 Def: QualifiedSpecifier . DecList SEMI
   44    | QualifiedSpecifier . DecList error

    ID  shift, and go to state 43

    VarDec   go to state 48
    DecList  go to state 49
    Dec      go to state 50


State 33

   16 StructSpecifier: STRUCT ID LC DefList . RC

    RC  shift, and go to state 51


State 34

   41 DefList: Def . DefList

    TYPE      shift, and go to state 1
    STRUCT    shift, and go to state 2
    FUNCTION  shift, and go to state 3
    CONST     shift, and go to state 4

    $default  reduce using rule 42 (DefList)

    QualifiedSpecifier  go to state 32
    Specifier           go to state 9
    StructSpecifier     go to state 10
    FunctionSpecifier   go to state 11
    DefList             go to state 52
    Def                 go to state 34


State 35

   20 SpecifierList: Specifier COMMA . SpecifierList

    TYPE      shift, and go to state 1
    STRUCT    shift, and go to state 2
    FUNCTION  shift, and go to state 3

    $default  reduce using rule 21 (SpecifierList)

    Specifier          go to state 23
    StructSpecifier    go to state 10
    FunctionSpecifier  go to state 11
    SpecifierList      go to state 53


State 36

   18 FunctionSpecifier: FUNCTION LT SpecifierList RA . Specifier GT

    TYPE      shift, and go to state 1
    STRUCT    shift, and go to state 2
    FUNCTION  shift, and go to state 3

    Specifier          go to state 54
    StructSpecifier    go to state 10
    FunctionSpecifier  go to state 11


State 37

   26 FunDec: ID LP error .

    $default  reduce using rule 26 (FunDec)


State 38

   25 FunDec: ID LP RP .

    $default  reduce using rule 25 (FunDec)


State 39

   29 ParamDec: QualifiedSpecifier . VarDec

    ID  shift, and go to state 43

    VarDec  go to state 55


State 40

   24 FunDec: ID LP VarList . RP

    RP  shift, and go to state 56


State 41

   27 VarList: ParamDec . COMMA VarList
   28        | ParamDec .

    COMMA  shift, and go to state 57

    $default  reduce using rule 28 (VarList)


State 42

   23 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 58


State 43

   22 VarDec: ID .

    $default  reduce using rule 22 (VarDec)


State 44

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 45

    7 ExtDef: QualifiedSpecifier FunDec error RC .

    $default  reduce using rule 7 (ExtDef)


State 46

    8 ExtDef: QualifiedSpecifier FunDec LC error .

    $default  reduce using rule 8 (ExtDef)


State 47

   30 CompSt: LC DefList . StmtList RC

    MYSTERIOUS_LEXEME  shift, and go to state 59
    ID                 shift, and go to state 60
    LC                 shift, and go to state 61
    MINUS              shift, and go to state 62
    NOT                shift, and go to state 63
    LP                 shift, and go to state 64
    IF                 shift, and go to state 65
    WHILE              shift, and go to state 66
    RETURN             shift, and go to state 67
    LAMBDA             shift, and go to state 68
    INT                shift, and go to state 69
    FLOAT              shift, and go to state 70
    CHAR               shift, and go to state 71

    $default  reduce using rule 33 (StmtList)

    CompSt                go to state 72
    StmtList              go to state 73
    Stmt                  go to state 74
    LambdaExp             go to state 75
    Exp                   go to state 76
    MysteriousLexemeList  go to state 77


State 48

   23 VarDec: VarDec . LB INT RB
   47 Dec: VarDec .
   48    | VarDec . ASSIGN Exp

    ASSIGN  shift, and go to state 78
    LB      shift, and go to state 27

    $default  reduce using rule 47 (Dec)


State 49

   43 Def: QualifiedSpecifier DecList . SEMI
   44    | QualifiedSpecifier DecList . error

    error  shift, and go to state 79
    SEMI   shift, and go to state 80


State 50

   45 DecList: Dec .
   46        | Dec . COMMA DecList

    COMMA  shift, and go to state 81

    $default  reduce using rule 45 (DecList)


State 51

   16 StructSpecifier: STRUCT ID LC DefList RC .

    $default  reduce using rule 16 (StructSpecifier)


State 52

   41 DefList: Def DefList .

    $default  reduce using rule 41 (DefList)


State 53

   20 SpecifierList: Specifier COMMA SpecifierList .

    $default  reduce using rule 20 (SpecifierList)


State 54

   18 FunctionSpecifier: FUNCTION LT SpecifierList RA Specifier . GT

    GT  shift, and go to state 82


State 55

   23 VarDec: VarDec . LB INT RB
   29 ParamDec: QualifiedSpecifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 29 (ParamDec)


State 56

   24 FunDec: ID LP VarList RP .

    $default  reduce using rule 24 (FunDec)


State 57

   27 VarList: ParamDec COMMA . VarList

    TYPE      shift, and go to state 1
    STRUCT    shift, and go to state 2
    FUNCTION  shift, and go to state 3
    CONST     shift, and go to state 4

    QualifiedSpecifier  go to state 39
    Specifier           go to state 9
    StructSpecifier     go to state 10
    FunctionSpecifier   go to state 11
    VarList             go to state 83
    ParamDec            go to state 41


State 58

   23 VarDec: VarDec LB INT RB .

    $default  reduce using rule 23 (VarDec)


State 59

   79 MysteriousLexemeList: MYSTERIOUS_LEXEME .
   80                     | MYSTERIOUS_LEXEME . MysteriousLexemeList

    MYSTERIOUS_LEXEME  shift, and go to state 59

    MYSTERIOUS_LEXEME  [reduce using rule 79 (MysteriousLexemeList)]
    $default           reduce using rule 79 (MysteriousLexemeList)

    MysteriousLexemeList  go to state 84


State 60

   74 Exp: ID .

    $default  reduce using rule 74 (Exp)


State 61

   30 CompSt: LC . DefList StmtList RC
